@@ -1,3 +1,8 @@
+2020-11-11  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp--test-share-p): New defun.
+	(tramp-test05-expand-file-name-relative): Use it.
+
 2020-10-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.4.4.3 released.
